--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,19 @@ SESSION_COOKIE_AGE=1800
 SESSION_INACTIVITY_TIMEOUT=1800
 SESSION_WARNING_THRESHOLD=300
 
-# Email Configuration (optional)
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=587
-# EMAIL_HOST_USER=your-email@example.com
-# EMAIL_HOST_PASSWORD=your-email-password
-# EMAIL_USE_TLS=True
+# Email Configuration
+# Backend: 'console' for development (prints to console), 'smtp' for production
+EMAIL_BACKEND=console
+# EMAIL_BACKEND=smtp
+
+# SMTP Settings (for production with EMAIL_BACKEND=smtp)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email@example.com
+EMAIL_HOST_PASSWORD=your-app-specific-password
+DEFAULT_FROM_EMAIL=noreply@ozedtech.com
+SERVER_EMAIL=server@ozedtech.com
+
+# Site URL (used in email links)
+SITE_URL=http://localhost:8000
